--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /* roboto-regular - cyrillic_latin */
 @font-face {
   font-display: swap; 
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/roboto-v30-cyrillic_latin-regular.woff2') format('woff2'); 
@@ -10,7 +10,7 @@
 /* roboto-700 - cyrillic_latin */
 @font-face {
   font-display: swap; 
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   src: url('../fonts/roboto-v30-cyrillic_latin-700.woff2') format('woff2'); 
@@ -53,7 +53,7 @@ img{
 /* CONTAINER */
 .container{
   width: 100%;
-  width: 1200px;
+  width: 1100px;
   padding-left: 50px;
   padding-right: 50px;
   margin-left: auto;
@@ -65,3 +65,113 @@ img{
 .main-content{
   flex-grow: 1;
 }
+
+
+/* SITE-HEADER */
+.site-header {
+  margin-top: 30px;
+  margin-bottom: 79px;
+}
+.site-header-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.site-logo-img {
+  width: 35px;
+  height: 42px;
+}
+.sitenav {
+  width: 463px;
+  height: 29px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 15px;
+}
+.sitenav-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+  text-decoration: none;
+}
+.sitenav-item:not(:last-child) {
+  margin-right: 30px;
+}
+.active{
+  padding-bottom: 3px;
+  border-bottom: 3px solid #333;
+}
+.sitenav-link {
+  color: #333;
+  text-decoration: none;
+}
+.for-help {
+  width: 153px;
+  padding-bottom: 3px;
+  border-bottom: 1px solid #333;
+}
+.search-help-input {
+  color: #666;
+  border: 0;
+}
+
+
+/* INTRODUCTION */
+.intro {
+  border-bottom: 2px solid rgba(221, 221, 221, 1);
+}
+.intro-container {
+  display: flex;
+}
+.intro-info {
+  margin-right: 245px;
+}
+.intro-info-block {
+  width: 490px;
+  margin-top: 90px;
+  margin-bottom: 30px;
+}
+.intro-info-block-header {
+  margin: 0;
+  margin-bottom: 30px;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 1.2;
+  color: #000;
+}
+.intro-info-block-text {
+  margin: 0;
+  padding-left: 40px;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-weight: 400;
+  color: #777;
+  border-left: 3px solid #888;
+}
+.intro-info-button {
+  width: 260px;
+  height: 51px;
+  text-transform: uppercase;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: #c9514c;
+  color: #fff;
+  border: none;
+}
+.intro-info-button:hover{
+  background-color: #ea625c;
+}
+.intro-info-button:active{
+  opacity: 0.8;
+}
+.intro-img {
+  width: 587px;
+  height: 565px;
+  margin-right: -260px;
+}
+
+
