--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-/* GLOBAL */
+/* CUSTOM PROPS */
+:root{
+  --primary: #ea625c;
+  --primary-dark: #c9514c;
+  --text-color: #333;
+  --focus-property: 2px dashed #7296ec;
+}
 /* roboto-regular - cyrillic_latin */
 @font-face {
   font-display: swap; 
@@ -14,14 +20,9 @@
   font-style: normal;
   font-weight: 700;
   src: url('../fonts/roboto-v30-cyrillic_latin-700.woff2') format('woff2'); 
-}
+}  
 
-:root{
-  --button-color: #c9514c;
-  --button-color-hover: #ea625c;
-  --focus-property: 2px dashed #7296ec;
-}
-
+/* GLOBAL */
 
 html{
   box-sizing: border-box;
@@ -42,11 +43,10 @@ body{
   padding: 0;
   margin: 0;
   font-family: "Roboto", "Arial", sans-serif;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
-  color: #222;
+  color: var(--text-color);
 }
 
 img{
@@ -56,30 +56,9 @@ img{
 
 /* OUTLINE-STYLES */
 *:focus{
-  outline: var(--focus-property);
+  outline: 2px dashed  var(--primary);
   outline-offset: 2px;
 }
-
-
-/* BUTTON */
-.button {
-  width: 260px;
-  height: 51px;
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: 700;
-  background-color: var(--button-color);
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-.button:hover{
-  background-color: var(--button-color-hover);
-}
-.button:active{
-  opacity: 0.8;
-}
-
 
 /* CONTAINER */
 .container{
@@ -91,6 +70,53 @@ img{
   margin-right: auto;
 }
 
+/* BUTTON */
+.button {
+  min-width: 260px;
+  padding: 12px 38px;
+  display: inline-block;
+  border: 0;
+  background-color: var(--primary);
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+.button:hover{
+  background-color: var(--primary-dark);
+}
+.button:active{
+  opacity: 0.6;
+}
+
+/* BUTTON */
+.lined-link{
+  display: inline-flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: bold;
+  color: var(--primary);
+  text-transform: uppercase;
+  text-decoration: none;
+  
+}
+.lined-link::before{
+  width: 40px;
+  height: 3px;
+  margin-right: 10px;
+  background-color: var(--primary);
+  content: "";
+  transition: 0.3s ease;
+}
+.lined-link:hover::before{
+  width: 60px;
+}
 
 /* MAIN-CONTENT */
 .main-content{
@@ -105,92 +131,102 @@ img{
 }
 .site-header-container{
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
-.site-logo-img {
+.site-header-logo{
+  margin-right: auto;
+  transition: opacity 0.3s ease;
+}
+.site-header-logo:hover{
+  opacity: 0.8;
+}
+.site-header-logo:active{
+  opacity: 0.6;
+}
+.site-header-logo-img {
+  display: block;
   width: 35px;
   height: 42px;
+  object-fit: contain;
 }
+
+/* SITE-NAV */
 .sitenav {
-  width: 463px;
-  height: 29px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 15px;
+  margin-right: 40px;
 }
 .sitenav-list {
-  margin: 0;
   padding: 0;
+  margin: 0;
   display: flex;
+  align-items: center;
   list-style: none;
-  text-decoration: none;
+  
 }
 .sitenav-item:not(:last-child) {
   margin-right: 30px;
 }
-.active{
-}
+
 .sitenav-link {
+  display: block;
+  padding-top: 6px;
+  padding-bottom: 3px;
+  border-bottom: 3px solid transparent ;
+  font-size: 15px;
   color: #333;
   text-decoration: none;
+  transition: border-bottom 0.3s ease;
 }
 .sitenav-link:hover{
-  font-weight: 700;
-  color: #000;
-  padding-bottom: 3px;
   border-bottom: 3px solid #333;
 }
-.sitenav-link:active{
-  padding-bottom: 3px;
-  border-bottom: 3px solid #333;
-  opacity: 0.8;
+
+/* SEARCH FORM */
+.search-form {
 }
-.for-help {
-  width: 153px;
-  padding-bottom: 3px;
+.search-form-input {
+  padding-top: 6px;
+  padding-bottom: 5px;
+  border: 0;
   border-bottom: 1px solid #333;
 }
-.search-help-input {
-  height: 20px;
-  color: #666;
-  border: 0;
-  outline: none;
-}
 
 
-/* INTRODUCTION */
-.intro {
-  
+/* HERO */
+.hero {
+  padding-top: 140px;
+  padding-bottom: 185px;
+  border-bottom: 2px solid #ddd;
+  background-image: url(../img/intro-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: left calc(50% + 545px) bottom;
 }
-.intro-container {
-  display: flex;
-}
-.intro-info {
-  margin-right: 245px;
-}
-.intro-info-block {
+
+/* LEAD-CTA */
+.lead-cta {
+  max-width: 100%;
   width: 490px;
-  margin-top: 90px;
-  margin-bottom: 30px;
 }
-.intro-info-block-header {
-  margin: 0;
+.lead-cta-heading {
+  margin-top: 0;
   margin-bottom: 30px;
   font-size: 50px;
-  font-weight: 700;
   line-height: 1.2;
   color: #000;
 }
-.intro-info-block-text {
-  margin: 0;
-  padding-left: 40px;
-  color: #777;
-  border-left: 3px solid #888;
+.lead-cta--white .lead-cta-heading{
+  color: #fff;
 }
-
+.lead-cta-text {
+  padding-left: 37px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  border-left: 3px solid #888;
+  color: #777;
+}
+.lead-cta--white .lead-cta-text{
+  color: #fff;
+  border-color: #fff;  
+}
 .intro-img {
   width: 587px;
   height: 565px;
@@ -202,140 +238,84 @@ img{
 .features {
   padding-top: 70px;
   padding-bottom: 70px;
-  border-top: 2px solid rgba(221, 221, 221, 0.9);
 }
 .features-list {
   padding: 0;
   margin: 0;
   display: flex;
+  list-style: none;
 }
 .features-item {
-  width: 280px;
-  list-style: none;
-  
+  width: 280px;  
 }
 .features-item:not(:last-child){
   margin-right: 80px;
 }
-.features-item-heading {
-  margin: 0;
+.features-heading {
+  margin-top: 0;
   margin-bottom: 30px;
   font-size: 18px;
-  font-weight: 700;
+  line-height: 1.5;
+  color: #222;
   text-transform: uppercase;
 }
-.features-item-text {
-  margin: 0;
-  font-size: 15px;
-}
-.features-item-text:last-child{
+.features-text {
+  margin-top: 0;
   margin-bottom: 20px;
-
+  font-size: 15px;
+  line-height: 1.6;
+  color: #333;
 }
-.features-item:not(:last-child)::after{
+.features-divider{
   width: 8px;
   height: 8px;
-  margin-right: 10px;
-  display: block;
-  content: "";
-  background-color: #999;
-}
-.learn-more{
-  text-decoration: none;
-}
-.features-item-info{
   margin: 0;
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: var(--button-color-hover);
-}
-
-.features-item-info::before{
-  width: 60px;
-  margin-right: 10px;
-  content: "";
-  border: 2px solid var(--button-color-hover);
+  border: 0;
+  background-color: #ddd;
+  box-shadow: 16px 0 0 0 #ddd,
+    32px 0 0 0 #ddd;
 }
 
 
-/* PURCHASE */
-.purchase {
+/* PROMO */
+.promo {
   padding-top: 70px;
   padding-bottom: 70px;
 }
-.purchase-container {
+.promo-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.purchase-block {
-  width: 490px;
-}
-.purchase-info {
-  margin-bottom: 30px;
-}
-.purchase-header {
-  margin: 0;
-  margin-bottom: 30px;
-  font-size: 50px;
-  font-weight: 700;
-  line-height: 1.2;
-}
-.purchase-text {
-  margin: 0;
-  padding-left: 40px;
-  border-left: 3px solid #888;
-  color: #777;
-}
-.purchase-img {
+.promo-img{
   width: 400px;
   height: 600px;
+  object-fit: cover;
 }
 
 
-/* SITE-FOOTER */
-.site-footer {
-  min-height: 830px;
-  padding-top: 70px;
-  padding-bottom: 70px;
-  background-image: url(../img/footer-bg.jpg);
+
+
+/* RUNNERS */
+.runners {
+  padding-top: 240px;
+  padding-bottom: 240px;
+  background-image: url(../img/runners.jpg);
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
-}
-.site-footer-container {
-  height: 755px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.site-footer-block {
-  width: 490px;
-}
-.site-footer-info{
-  margin-bottom: 30px;
-}
-.site-footer-info-header {
-  margin: 0;
-  margin-bottom: 30px;
-  font-size: 50px;
-  font-weight: 700;
-  line-height: 1.2;
   color: #fff;
 }
-.site-footer-info-text {
-  margin: 0;
-  padding-left: 40px;
-  color: #fff;
-  border-left: 2px solid #fff;
+.runners-lead-cta{
+  margin-left: auto;
 }
 
 
 
 
+
+/* RETINA-BG*/
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (   min--moz-device-pixel-ratio: 2),
@@ -343,7 +323,10 @@ only screen and (     -o-min-device-pixel-ratio: 2/1),
 only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) { 
-  .site-footer{
-    background-image: url(../img/footer-bg@2x.jpg);
+  .hero{
+    background-image: url(../img/intro-bg@2x.jpg);
+  }
+  .runners{
+    background-image: url(../img/runners@2x.jpg);
   }
 }
